src/tests/testfiles/function-declarations/1.txt
Error at 3:1: Function declaration parameters don't match previous declaration
int f(int a, float b);
^
